# mslearn-azure-ml

./: .gitignore  NOTES  pyproject.toml
